[Sarthik]Refactor: admin signUp API, included middleware to handle user role
