# src/routes/user.route.js
@@ -2,19 +2,23 @@ import express from 'express';
 import * as userController from '../controllers/user.controller';
 import { newUserValidator, emailValidator } from '../validators/user.validator';
 import { userAuth } from '../middlewares/auth.middleware';
+import { handleRole } from '../middlewares/handleRole'
 
 const router = express.Router();
 
 //route to get all users
-router.post('', newUserValidator, userController.signUp);
+router.post('', newUserValidator, handleRole, userController.signUp);
+
+// route for admin registration
+router.post('/adminsignup', newUserValidator, handleRole, userController.signUp);
 
 //route user login
-router.post('/signIn', userController.signIn);
+router.post('/signin', userController.signIn);
 
 //forget password
-router.post('/forget-password', emailValidator, userController.forgetPassword);
+router.post('/forgetpassword', emailValidator, userController.forgetPassword);
 
 //reset password
-router.put('/reset-password', userAuth, userController.resetPassword);
+router.put('/resetpassword', userAuth, userController.resetPassword);
 
 export default router;
